--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -517,6 +517,19 @@
   timestamp = {2019.03.27},
 }
 
+@Article{Ahn2010,
+  author    = {Ahn, Y. Y. and Bagrow, J. P. and Lehmann, S.},
+  title     = {Link communities reveal multiscale complexity in networks},
+  journal   = {Nature},
+  year      = {2010},
+  volume    = {466},
+  number    = {7307},
+  pages     = {761-764},
+  doi       = {10.1038/nature09182},
+  owner     = {Vincent},
+  timestamp = {2012.07.27},
+}
+
 @InCollection{Ahn2011a,
   author    = {Ahn, J.-W. and Taieb-Maimon, M. and Sopan, A. and Plaisant, C. and Shneiderman, B.},
   title     = {Temporal Visualization of Social Network Dynamics: Prototypes for Nation of Neighbors},
@@ -2265,6 +2278,20 @@
   url       = {https://etheses.bham.ac.uk/id/eprint/5848/},
 }
 
+@Article{Bales2016,
+  author        = {Bales, K. N. and Eager, Z. D. and Harkin, A. A.},
+  title         = {Efficiency-modularity for finding communities and anticommunities in networks},
+  journal       = {Journal of Complex Networks},
+  year          = {2016},
+  volume        = {5},
+  number        = {1},
+  pages         = {70-83},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1093/comnet/cnw012},
+  owner         = {Vincent},
+  timestamp     = {2016.06.27},
+}
+
 @Article{Ball1996,
   author    = {Ball, T. and Eick, S. G.},
   title     = {Software visualization in the large},
@@ -3485,6 +3512,19 @@
   doi       = {10.4324/9780203820551},
   owner     = {Vincent},
   timestamp = {2021.09.16},
+}
+
+@Article{Bhat2014a,
+  author    = {Bhat, S. and Abulaish, M.},
+  title     = {HOCTracker: Tracking the Evolution of Hierarchical and Overlapping Communities in Dynamic Social Networks},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2015},
+  volume    = {27},
+  number    = {4},
+  pages     = {1019-1013},
+  doi       = {10.1109/TKDE.2014.2349918},
+  owner     = {Vincent},
+  timestamp = {2014.09.09},
 }
 
 @InProceedings{Bhattacharya2005,
@@ -6362,6 +6402,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url         = {http://cs224d.stanford.edu/reports/ChagantyArun.pdf},
 }
 
+@Article{Chakraborty2013,
+  author    = {Chakraborty, T. and Srinivasan, S. and Ganguly, N. and Bhowmick, S. and Mukherjee, A.},
+  title     = {Constant Communities in Complex Networks},
+  journal   = {Scientific Reports},
+  year      = {2013},
+  volume    = {3},
+  pages     = {1825},
+  doi       = {10.1038/srep01825},
+  owner     = {Vincent},
+  timestamp = {2013.03.03},
+}
+
 @InProceedings{Chakraborty2016,
   author    = {Chakraborty, T. and Choudhury, P.},
   title     = {Authorship identification in Bengali language: A graph based approach},
@@ -6625,6 +6677,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://aclanthology.coli.uni-saarland.de/papers/N18-2106/n18-2106},
 }
 
+@InProceedings{Chaudhary2014,
+  author    = {Chaudhary, R. and Bhusry, M.},
+  title     = {A new contrive to evaluate web page ranking},
+  booktitle = {International Conference on Electronics and Communication Systems},
+  year      = {2014},
+  pages     = {1-6},
+  doi       = {10.1109/ecs.2014.6892717},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InProceedings{Chaudhry2009,
   author    = {Chaudhry, R. and Ravichandran, A. and Hager, G. and Vidal, R.},
   title     = {Histograms of oriented optical flow and Binet-Cauchy kernels on nonlinear dynamical systems for the recognition of human actions},
@@ -6787,6 +6850,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
   year      = {2014},
   volume    = {1},
   number    = {1},
+  pages     = {46-65},
   doi       = {10.1109/TCSS.2014.2307458},
   owner     = {Vincent},
   timestamp = {2014.03.04},
@@ -6977,6 +7041,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1145/1518701.1518823},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@InProceedings{Cheng2012,
+  author    = {Cheng, Q. and Liu, Z. and Huang, J. and Zhu, C. and Liu, Y.},
+  title     = {Hierarchical Clustering Based on Hyper-edge Similarity for Community Detection},
+  booktitle = {IEEE/WIC/ACM International Joint Conferences on Web Intelligence and Intelligent Agent Technology},
+  year      = {2012},
+  pages     = {238-242},
+  owner     = {Vincent},
+  timestamp = {2013.05.06},
+  url       = {http://dl.acm.org/citation.cfm?id=2457688},
 }
 
 @Article{Cherifi2019,
@@ -8610,6 +8685,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.25},
 }
 
+@InProceedings{Dao2018a,
+  author        = {Dao, V. L. and Bothorel, C. and Lenca, P.},
+  title         = {Estimating the similarity of community detection methods based on cluster size distribution},
+  booktitle     = {7th International Conference on Complex Networks and Their Applications},
+  year          = {2018},
+  volume        = {812},
+  series        = {Studies in Computational Intelligence},
+  pages         = {183-194},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/978-3-030-05411-3_15},
+  owner         = {Vincent},
+  timestamp     = {2018.11.17},
+}
+
 @Article{Das2014,
   author    = {Das, D. and Chen, D. and Martins, A. F. T. and Schneider, N. and Smith, N. A.},
   title     = {Frame-Semantic Parsing},
@@ -9882,6 +9971,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.19},
 }
 
+@InProceedings{Duan2009,
+  author    = {Duan, D. and Li, Y. and Jin, Y. and Lu, Z.},
+  title     = {Community mining on dynamic weighted directed graphs},
+  booktitle = {1st ACM international workshop on Complex networks meet information \& knowledge management.},
+  year      = {2009},
+  pages     = {11-18},
+  doi       = {10.1145/1651274.1651278},
+  owner     = {Vincent},
+  timestamp = {2012.08.19},
+}
+
 @InProceedings{Duan2010,
   author    = {Duan, L. and Xu, D. and Tsang, I. W. and Luo, J.},
   title     = {Visual event recognition in videos by learning from web data},
@@ -10959,6 +11059,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.06.24},
 }
 
+@InProceedings{Ernastuti2016,
+  author    = {{Ernastuti} and Nilmada, M. and Salim, R.},
+  title     = {The Diameter of Enhanced Extended Fibonacci Cube Interconnection Networks},
+  booktitle = {2nd International Conference on Electrical Systems, Technology and Information},
+  year      = {2016},
+  volume    = {365},
+  series    = {Lecture Notes in Electrical Engineering},
+  pages     = {675-683},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-287-988-2_75},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InCollection{Erne2011,
   author    = {Erne, L.},
   title     = {The First Quarto of Romeo and Juliet},
@@ -11113,6 +11227,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {http://clg.wlv.ac.uk/papers/evans-00b.pdf},
+}
+
+@Article{Evans2010b,
+  author    = {Evans, T. S.},
+  title     = {Clique graphs and overlapping communities},
+  journal   = {Journal of Statistical Mechanics: Theory and Experiment},
+  year      = {2010},
+  volume    = {2010},
+  number    = {12},
+  pages     = {P12037},
+  doi       = {10.1088/1742-5468/2010/12/p12037},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
 }
 
 @Article{Eve2017,
@@ -12152,6 +12279,20 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1080/17450910600662877},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Article{FonsecaVieira2020,
+  author        = {da Fonseca Vieira, V. and Ribeiro Xavier, C. and Gonçalves Evsukoff, A.},
+  title         = {A comparative study of overlapping community detection methods from the perspective of the structural properties},
+  journal       = {Applied Network Science},
+  year          = {2020},
+  volume        = {5},
+  number        = {1},
+  pages         = {51},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/s41109-020-00289-9},
+  owner         = {Vincent},
+  timestamp     = {2020.08.21},
 }
 
 @Article{FontouraCosta2004a,
@@ -13884,6 +14025,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Gorovits2018,
+  author    = {Gorovits, A. and Gujral, E. and Papalexakis, E. E. and Bogdanov, P.},
+  title     = {LARC: Learning Activity-Regularized Overlapping Communities Across Time},
+  booktitle = {24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  year      = {2018},
+  pages     = {1465-1474},
+  doi       = {10.1145/3219819.3220118},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InProceedings{Goto2008,
   author    = {Goto, J. and Yagi, Y. and Aizawa, A. and Sekine, S.},
   title     = {Generation of correlation charts from TV programs based on anaphora resolution},
@@ -14270,6 +14422,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1093/res/os-iv.14.152},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Gregory2010,
+  author    = {Gregory, Steve},
+  title     = {Finding overlapping communities in networks by label propagation},
+  journal   = {New Journal of Physics},
+  year      = {2010},
+  volume    = {12},
+  number    = {10},
+  pages     = {103018},
+  doi       = {10.1088/1367-2630/12/10/103018},
+  owner     = {Vincent},
+  timestamp = {2011.01.01},
 }
 
 @Article{Gregory2013,
@@ -16496,6 +16661,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.ucpress.edu/book/9780520221659/writing-the-character-centered-screenplay-updated-and-expanded-edition},
 }
 
+@Article{Hossain2015,
+  author    = {Hossain, M. A.},
+  title     = {Social realistic projections of galsworthy’s strife},
+  journal   = {English Language and Literature Studies},
+  year      = {2015},
+  volume    = {5},
+  number    = {4},
+  pages     = {53},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+  url       = {http://old.ease.org.uk/sites/default/files/social_realistic_projections_in_galsworhy_ells-canada.pdf},
+}
+
 @InProceedings{Hotho2003,
   author    = {Hotho, A. and Staab, S. and Stumme, G.},
   title     = {WordNet improves text document clustering},
@@ -16679,6 +16857,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.12},
   url       = {https://aclweb.org/anthology/papers/N/N12/N12-1015/},
+}
+
+@Article{Huang2013a,
+  author    = {Huang, L. and Wang, G. and Wang, Y. and Blanzieri, E. and Su, C.},
+  title     = {Link Clustering with Extended Link Similarity and EQ Evaluation Division},
+  journal   = {PLoS ONE},
+  year      = {2013},
+  volume    = {8},
+  number    = {6},
+  pages     = {e66005},
+  doi       = {10.1371/journal.pone.0066005},
+  owner     = {Vincent},
+  timestamp = {2013.06.25},
 }
 
 @Article{Huang2017,
@@ -19169,6 +19360,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://cora.ucc.ie/handle/10468/3009},
 }
 
+@InCollection{Kiss1973,
+  author    = {Kiss, G. R. and Armstrong, C. and Milroy, R. and Piper, J.},
+  title     = {An associative thesaurus of english and its computer analysis},
+  booktitle = {The computer and literary studies},
+  publisher = {University Press},
+  year      = {1973},
+  pages     = {153-165},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+  url       = {https://www.bibsonomy.org/bibtex/2a5a7debef9c7b1747209b47ae80687e8/josephausterwei},
+}
+
 @Book{Kitchen2003,
   title     = {On the reliability of the old testament},
   publisher = {Wiliam B. Eerdmans Publishing},
@@ -20546,6 +20749,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.80.056117},
   owner     = {Vincent},
   review    = {arXiv link: http://arxiv.org/abs/0908.1062},
+  timestamp = {2010.06.03},
+}
+
+@Article{Lancichinetti2009b,
+  author    = {Lancichinetti, Andrea and Fortunato, Santo and Kertész, János},
+  title     = {Detecting the overlapping and hierarchical community structure in complex networks},
+  journal   = {New Journal of Physics},
+  year      = {2009},
+  volume    = {11},
+  pages     = {033015},
+  doi       = {10.1088/1367-2630/11/3/033015},
+  owner     = {Vincent},
   timestamp = {2010.06.03},
 }
 
@@ -21980,6 +22195,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.27},
 }
 
+@InProceedings{Li2015d,
+  author    = {Li, C. and Zhou, H. and Zhou, J. and Xiang, J. and Qin, Y. and Zhong, N.},
+  title     = {Change in human brain functional network based on Granger causality analysis},
+  booktitle = {IEEE International Conference on Cyber Technology in Automation, Control, and Intelligent Systems},
+  year      = {2015},
+  pages     = {1889-1893},
+  doi       = {10.1109/cyber.2015.7288235},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @Article{Li2015o,
   author    = {Li, Z. X. and He, L. L. and Li, Y. R.},
   title     = {A novel multiobjective particle swarm optimization algorithm for signed network community detection},
@@ -22068,7 +22294,21 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
-@InProceedings{Li2017d,
+@Article{Li2017d,
+  author        = {Li, Zhangtao and Liu, Jing and Wu, Kai},
+  title         = {A Multiobjective Evolutionary Algorithm Based on Structural and Attribute Similarities for Community Detection in Attributed Networks},
+  journal       = {IEEE Transactions on Cybernetics},
+  year          = {2018},
+  volume        = {48},
+  number        = {7},
+  pages         = {1963-1976},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/tcyb.2017.2720180},
+  owner         = {Vincent},
+  timestamp     = {2017.08.24},
+}
+
+@InProceedings{Li2017e,
   author    = {Li, J. and Wong, Y. and Zhao, Q. and Kankanhalli, M. S.},
   title     = {Dual-Glance Model for Deciphering Social Relationships},
   booktitle = {IEEE International Conference on Computer Vision},
@@ -22136,6 +22376,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.eswa.2018.08.009},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{Li2019ac,
+  author    = {Li, M. and Liu, J. and Wu, P. and Teng, X.},
+  title     = {Evolutionary Network Embedding Preserving both Local Proximity and Community Structure},
+  journal   = {IEEE Transactions on Evolutionary Computation},
+  year      = {2019},
+  volume    = {24},
+  pages     = {523–535},
+  doi       = {10.1109/tevc.2019.2937455},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
 }
 
 @InProceedings{Li2019o,
@@ -23258,6 +23510,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1098/rsbl.2003.0057},
   owner     = {Vincent},
   timestamp = {2012.07.25},
+}
+
+@Article{Lusseau2003a,
+  author    = {Lusseau, David and Schneider, Karsten and Boisseau, Oliver J. and Haase, Patti and Slooten, Elisabeth and Dawson, Steve M.},
+  title     = {The bottlenose dolphin community of Doubtful Sound features a large proportion of long-lasting associations},
+  journal   = {Behavioral Ecology and Sociobiology},
+  year      = {2003},
+  volume    = {54},
+  number    = {4},
+  pages     = {396-405},
+  doi       = {10.1007/s00265-003-0651-y},
+  owner     = {Vincent},
+  timestamp = {2012.09.19},
 }
 
 @Article{Lusseau2004,
@@ -25044,6 +25309,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.01},
 }
 
+@InProceedings{Meng2016b,
+  author        = {Meng, Xiangfeng and Tong, Yunhai and Liu, Xinhai and Zhao, Shuai and Yang, Xianglin and Tan, Shaohua},
+  title         = {A novel dynamic community detection algorithm based on modularity optimization},
+  booktitle     = {7th IEEE International Conference on Software Engineering and Service Science},
+  year          = {2016},
+  pages         = {72-75},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/ICSESS.2016.7883018},
+  owner         = {Vincent},
+  timestamp     = {2017.04.01},
+}
+
 @Article{Merchant2018,
   author    = {Merchant, B.},
   title     = {When an AI Goes Full Jack Kerouac},
@@ -25753,6 +26030,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1006/jtbi.2001.2460},
   owner     = {Vincent},
   timestamp = {2019.03.26},
+}
+
+@Article{Moody2001,
+  author    = {Moody, J.},
+  title     = {Peer influence groups: Identifying dense clusters in large networks},
+  journal   = {Social Networks},
+  year      = {2001},
+  volume    = {23},
+  pages     = {261-283},
+  doi       = {10.1016/S0378-8733(01)00042-9},
+  owner     = {Vincent},
+  timestamp = {2012.08.25},
 }
 
 @Article{Moody2002,
@@ -27316,6 +27605,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1699684},
 }
 
+@InProceedings{Nguyen2011a,
+  author    = {Nguyen, N. P. and Dinh, T. N. and Tokala, S. and Thai, M. T.},
+  title     = {Overlapping communities in dynamic networks: their detection and mobile applications},
+  booktitle = {17th annual international conference on Mobile computing and networking},
+  year      = {2011},
+  publisher = {85-96},
+  doi       = {10.1145/2030613.2030624},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InProceedings{Nguyen2013,
   author    = {Nguyen, D. and Trieschnigg, D. and Theune, M.},
   title     = {Folktale Classification Using Learning to Rank},
@@ -27330,7 +27630,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
-@InProceedings{Nguyen2014,
+@Article{Nguyen2014,
+  author    = {Nguyen, Nam P. and Dinh, Thang N. and Shen, Yilin and Thai, My T.},
+  title     = {Dynamic Social Community Detection and Its Applications},
+  journal   = {PLoS ONE},
+  year      = {2014},
+  volume    = {9},
+  number    = {4},
+  pages     = {e91431},
+  doi       = {10.1371/journal.pone.0091431},
+  owner     = {Vincent},
+  timestamp = {2014.04.15},
+}
+
+@InProceedings{Nguyen2014a,
   author    = {Nguyen, D. and Trieschnigg, D. and Theune, M.},
   title     = {Using Crowdsourcing to Investigate Perception of Narrative Similarity},
   booktitle = {23rd ACM International Conference on Conference on Information and Knowledge Management},
@@ -27420,6 +27733,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.vanhamel.nl/codecs/Nic_Ghiollamhaith_1981a},
+}
+
+@Article{Nicosia2009,
+  author    = {Nicosia, V. and Mangioni, G. and Carchiolo, V. and Malgeri, M.},
+  title     = {Extending the definition of modularity to directed graphs with overlapping communities},
+  journal   = {Journal of Statistical Mechanics},
+  year      = {2009},
+  volume    = {2009},
+  number    = {3},
+  pages     = {P03024},
+  doi       = {10.1088/1742-5468/2009/03/P03024},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @InCollection{Nicosia2013,
@@ -28323,6 +28649,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/IJCNN.2016.7727719},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Palla2005,
+  author    = {Palla, G. and Derenyi, I. and Farkas, I. and Vicsek, T.},
+  title     = {Uncovering the overlapping community structure of complex networks in nature and society},
+  journal   = {Nature},
+  year      = {2005},
+  volume    = {435},
+  number    = {7043},
+  pages     = {814-818},
+  doi       = {10.1038/nature03607},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Palmer2005,
@@ -29570,6 +29909,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.24193/mjcst.2020.10.02},
   owner     = {Vincent},
   timestamp = {2020.12.24},
+}
+
+@InProceedings{Ponnambalam2016,
+  author    = {Ponnambalam, L. and Fu, X. and Goh, R. S. M. and Sarawgi, D.},
+  title     = {A multi-agent model for adaptive vaccination during infectious disease outbreaks},
+  booktitle = {International Conference on Computing Technologies and Intelligent Data Engineering},
+  year      = {2016},
+  pages     = {1-5},
+  doi       = {10.1109/icctide.2016.7725354},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
 }
 
 @InProceedings{Pons2005,
@@ -33286,6 +33636,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.06.12},
 }
 
+@InProceedings{Seo2017,
+  author    = {Seo, D. and Choi, Y. and Lee, M.-H. and Yu, S. J.},
+  title     = {Development of biological network crawling, clustering and visualization system},
+  booktitle = {14th International Conference on Electrical Engineering/Electronics, Computer, Telecommunications and Information Technology},
+  year      = {2017},
+  pages     = {726-728},
+  doi       = {10.1109/ecticon.2017.8096341},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InProceedings{Serban2016,
   author    = {Serban, Iulian V. and Sordoni, Alessandro and Bengio, Yoshua and Courville, Aaron and Pineau, Joelle},
   title     = {Building End-To-End Dialogue Systems Using Generative Hierarchical Neural Network Models},
@@ -33387,6 +33748,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.cambridge.org/core/books/understanding-machine-learning/3059695661405D25673058E43C8BE2A6},
+}
+
+@InProceedings{Shang2012,
+  author    = {Shang, Jiaxing and Liu, Lianchen and Xie, Feng and Chen, Zhen and Miao, Jiajia and Fang, Xuelin and Wu, Cheng},
+  title     = {A Real-Time Detecting Algorithm for Tracking Community Structure of Dynamic Networks},
+  booktitle = {6th SNA-KDD Workshop Proceedings},
+  year      = {2012},
+  owner     = {Vincent},
+  timestamp = {2012.08.11},
+  url       = {http://snakdd.com/SNAKDD2012-proceeding/doc/a1-shang.pdf},
 }
 
 @Article{Shanno1970,
@@ -35649,6 +36020,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@Article{Tang2018,
+  author    = {Tang, J. and Tang, X. and Yuan, J.},
+  title     = {Profit Maximization for Viral Marketing in Online Social Networks: Algorithms and Analysis},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2018},
+  volume    = {30},
+  number    = {6},
+  pages     = {1095-1108},
+  doi       = {10.1109/tkde.2017.2787757},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
+}
+
 @InProceedings{Tang2020,
   author    = {Tang, K. and Niu, Y. and Huang, J. and Shi, J. and Zhang, H.},
   title     = {Unbiased Scene Graph Generation From Biased Training},
@@ -35969,6 +36353,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/nlh.2018.0005},
   owner     = {Vincent},
   timestamp = {2020.12.01},
+}
+
+@Article{Teng2019,
+  author        = {Teng, X. and Liu, J. and Li, M.},
+  title         = {Overlapping Community Detection in Directed and Undirected Attributed Networks Using a Multiobjective Evolutionary Algorithm},
+  journal       = {IEEE Transactions on Cybernetics},
+  year          = {2021},
+  volume        = {51},
+  number        = {1},
+  pages         = {138-150},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/tcyb.2019.2931983},
+  owner         = {Vincent},
+  timestamp     = {2019.09.07},
 }
 
 @Article{Teng2021,
@@ -37092,7 +37490,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   type      = {BSc Thesis},
   owner     = {Vincent},
   timestamp = {2021.07.26},
-  url       = {https://dspace.cuni.cz/bitstream/handle/20.500.11956/127970/130309114.pdf?sequence=1},
+  url       = {https://dspace.cuni.cz/bitstream/handle/20.500.11956/127970/130309114.pdf},
 }
 
 @Book{Uspensky1983,
@@ -37307,6 +37705,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/2003.08811},
 }
 
+@Article{VanLierde2019,
+  author    = {Van Lierde, Hadrien and Chen, G. and Chow, Tommy W. S.},
+  title     = {Scalable Spectral Clustering for Overlapping Community Detection in Large-Scale Networks},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2020},
+  volume    = {32},
+  number    = {4},
+  pages     = {754-767},
+  doi       = {10.1109/TKDE.2019.2892096},
+  owner     = {Vincent},
+  timestamp = {2019.01.19},
+}
+
 @Book{VanMaanen2011,
   title     = {Tales of the field: On writing ethnography},
   publisher = {University of Chicago Press},
@@ -37421,6 +37832,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2577741},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Book{Viala2008,
+  title     = {La France galante: essai historique sur une catégorie culturelle, de ses origines jusqu’à la Révolution},
+  publisher = {Presses Universitaires de France},
+  year      = {2008},
+  author    = {Viala, A.},
+  doi       = {10.3917/puf.vial.2008.01},
+  owner     = {Vincent},
+  timestamp = {2021.09.18},
 }
 
 @Article{Viard2018,
@@ -38062,6 +38483,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://proceedings.mlr.press/v30/Wang13.html},
 }
 
+@InProceedings{Wang2013q,
+  author    = {Wang, C.-D. and Lai, J.-H. and Yu, P. S.},
+  title     = {Dynamic Community Detection in Weighted Graph Streams},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2013},
+  pages     = {151-161},
+  doi       = {10.1137/1.9781611972832.17},
+  owner     = {Vincent},
+  timestamp = {2013.12.26},
+}
+
 @InProceedings{Wang2014,
   author    = {Wang, Z. and Zhang, J. and Feng, J. and Chen, Z.},
   title     = {Knowledge graph embedding by translating on hyperplanes},
@@ -38086,6 +38518,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@Article{Wang2016h,
+  author        = {Wang, W. and Jiao, P. and He, D. and Jin, D. and Pan, L. and Gabrys, B.},
+  title         = {Autonomous Overlapping Community Detection in Temporal Networks: A Dynamic Bayesian Nonnegative Matrix Factorization Approach},
+  journal       = {Knowledge-Based Systems},
+  year          = {2016},
+  volume        = {110},
+  pages         = {121-134},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1016/j.knosys.2016.07.021},
+  owner         = {Vincent},
+  timestamp     = {2016.08.02},
+}
+
 @Article{Wang2017,
   author    = {Wang, J. and Yuan, Y. and Yu, G.},
   title     = {Face Attention Network: An Effective Face Detector for the Occluded Faces},
@@ -38096,6 +38541,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.03.15},
   url       = {https://arxiv.org/abs/1711.07246},
+}
+
+@Article{Wang2017o,
+  author        = {Wang, X. and Liu, G. and Li, J.},
+  title         = {Overlapping Community Detection Based on Structural Centrality in Complex Networks},
+  journal       = {IEEE Access},
+  year          = {2017},
+  volume        = {5},
+  pages         = {25258-25269},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/ACCESS.2017.2769484},
+  owner         = {Vincent},
+  timestamp     = {2017.11.11},
 }
 
 @Article{Wang2017y,
@@ -38637,6 +39095,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tkde.2016.2518687},
   owner     = {Vincent},
   timestamp = {2019.03.30},
+}
+
+@Article{Whang2019,
+  author    = {Whang, J. J. and Hou, Y. and Gleich, D. F. and Dhillon, I. S.},
+  title     = {Non-Exhaustive, Overlapping Clustering},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2019},
+  volume    = {41},
+  number    = {11},
+  pages     = {2644-2659},
+  doi       = {10.1109/tpami.2018.2863278},
+  owner     = {Vincent},
+  timestamp = {2021.09.20},
 }
 
 @Book{White1992,
@@ -39412,6 +39883,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@Article{Xie2011,
+  author    = {Xie, J. and Kelley, S. and Szymanski, B. K.},
+  title     = {Overlapping community detection in networks: The state-of-the-art and comparative study},
+  journal   = {ACM Computing Surveys},
+  year      = {2013},
+  volume    = {45},
+  number    = {4},
+  pages     = {43},
+  doi       = {10.1145/2501654.2501657},
+  owner     = {Vincent},
+  timestamp = {2011.11.01},
+}
+
+@InProceedings{Xie2013a,
+  author    = {Xie, J. and Chen, M. and Szymanski, B. K.},
+  title     = {LabelRankT: Incremental Community Detection in Dynamic Networks via Label Propagation},
+  booktitle = {Workshop on dynamic networks management and mining},
+  year      = {2013},
+  pages     = {25-32},
+  doi       = {10.1145/2489247.2489249},
+  owner     = {Vincent},
+  timestamp = {2013.05.14},
+}
+
 @InProceedings{Xie2020,
   author    = {Xie, G.-S. and Liu, L. and Zhu, F. and Zhao, F. and Zhang, Z. and Yao, Y. and Qin, J. and Shao, L.},
   title     = {Region Graph Embedding Network for Zero-Shot Learning},
@@ -39677,6 +40172,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.4304/jmm.8.2.113-120},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@InProceedings{Yang2013a,
+  author    = {Yang, J. and Leskovec, J.},
+  title     = {Overlapping community detection at scale: a nonnegative matrix factorization approach},
+  booktitle = {6th ACM international conference on Web search and data mining},
+  year      = {2013},
+  pages     = {587-596},
+  doi       = {10.1145/2433396.2433471},
+  owner     = {Vincent},
+  timestamp = {2013.02.19},
 }
 
 @InProceedings{Yang2016,
@@ -40186,6 +40692,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Zachary1977,
+  author    = {Zachary, W. W.},
+  title     = {An information flow model for conflict and fission in small groups},
+  journal   = {Journal of Anthropological Research},
+  year      = {1977},
+  volume    = {33},
+  number    = {4},
+  pages     = {452-473},
+  doi       = {10.1086/jar.33.4.3629752},
+  owner     = {Vincent},
+  timestamp = {2010.12.20},
+}
+
 @InProceedings{Zadeh2014,
   author    = {Zadeh, B. Q. and Handschuh, S.},
   title     = {Evaluation of technology term recognition with random indexing},
@@ -40415,6 +40934,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.14},
   url       = {https://www.cs.cmu.edu/~awb/papers/eurospeech2003/esper.pdf},
+}
+
+@Article{Zhang2007,
+  author    = {Zhang, S. H. and Wang, R. S. and Zhang, X. S.},
+  title     = {Identification of overlapping community structure in complex networks using fuzzy c-means clustering},
+  journal   = {Physica A},
+  year      = {2007},
+  volume    = {374},
+  number    = {1},
+  pages     = {483-490},
+  doi       = {10.1016/j.physa.2006.07.023},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @InProceedings{Zhang2009,
@@ -40937,6 +41469,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.07.24},
 }
 
+@Article{Zhou2015g,
+  author    = {Zhou, L. and Lü, K. and Yang, P. and Wang, L. and Kong, B.},
+  title     = {An approach for overlapping and hierarchical community detection in social networks based on coalition formation game theory},
+  journal   = {Expert Systems with Applications},
+  year      = {2015},
+  volume    = {42},
+  number    = {24},
+  pages     = {9634-9646},
+  doi       = {10.1016/j.eswa.2015.07.023},
+  owner     = {Vincent},
+  timestamp = {2015.08.11},
+}
+
 @Article{Zhou2016,
   author    = {Zhou, Bolei and Khosla, Aditya and Lapedriza, Agata and Torralba, Antonio and Oliva, Aude},
   title     = {Places: An Image Database for Deep Scene Understanding},
@@ -41139,16 +41684,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.ucpress.edu/book/9780520061842/virginia-woolf-and-the-real-world},
-}
-
-@Book{,
-  title     = {La France galante: essai historique sur une catégorie culturelle, de ses origines jusqu’à la Révolution},
-  publisher = {Presses Universitaires de France},
-  year      = {2008},
-  author    = {Viala, A.},
-  doi       = {10.3917/puf.vial.2008.01},
-  owner     = {Vincent},
-  timestamp = {2021.09.18},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
