--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -23753,6 +23753,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@InProceedings{MacCarron2013b,
+  author    = {Mac Carron, P. and Kenna, R.},
+  title     = {Network Analysis of Beowulf, the Iliad and the Táin Bó Cúailnge},
+  booktitle = {7th Annual International Conference on Comparative Mythology},
+  year      = {2013},
+  pages     = {125-141},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
+  url       = {http://users.complexity-coventry.org/~kenna/MacCarronKenna.pdf},
+}
+
 @PhdThesis{MacCarron2014,
   author      = {MacCarron, P.},
   title       = {A Network Theoretic Approach to Comparative Mythology},
@@ -30975,6 +30986,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1163/156856807782753921},
   owner     = {Vincent},
   timestamp = {2020.12.18},
+}
+
+@Article{Redner2005,
+  author    = {Redner, S.},
+  title     = {Citation Statistics from 110 Years {ofPhysical} Review},
+  journal   = {Physics Today},
+  year      = {2005},
+  volume    = {58},
+  number    = {6},
+  pages     = {49-54},
+  doi       = {10.1063/1.1996475},
+  owner     = {Vincent},
+  timestamp = {2021.09.21},
 }
 
 @Book{Reed2004,
